--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -42,42 +42,51 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(0.145 0 0); /* Very Dark */
-  --foreground: oklch(0.985 0 0); /* Very Light */
-  --card: oklch(0.205 0 0); /* Dark */
-  --card-foreground: oklch(0.985 0 0); /* Very Light */
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(
-    0.922 0 0
-  ); /* Very light - suitable as a light accent text on dark BGs */
-  --primary-foreground: oklch(
-    0.205 0 0
-  ); /* Dark - suitable as text on light --primary BG */
-  --secondary: oklch(0.269 0 0); /* Dark */
-  --secondary-foreground: oklch(0.985 0 0); /* Very Light */
-  --muted: oklch(0.269 0 0); /* Dark */
-  --muted-foreground: oklch(0.708 0 0); /* Light (less so than foreground) */
-  --accent: oklch(0.269 0 0); /* Dark */
-  --accent-foreground: oklch(0.985 0 0); /* Very Light */
-  --destructive: oklch(0.704 0.191 22.216); /* Reddish, mid-light */
-  --border: oklch(1 0 0 / 10%); /* Light, transparent */
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0); /* Mid-tone gray */
-  --chart-1: oklch(0.488 0.243 264.376); /* Purple, mid-dark */
-  --chart-2: oklch(0.696 0.17 162.48); /* Green/Teal, mid-light */
-  --chart-3: oklch(0.769 0.188 70.08); /* Yellow, light */
-  --chart-4: oklch(0.627 0.265 303.9); /* Magenta, mid-light */
-  --chart-5: oklch(0.645 0.246 16.439); /* Orange, mid-light */
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --gradient: linear-gradient(to top left, #003973, #e5e5be);
+  --background: 217 100% 95%;
+  --foreground: 217 5% 10%;
+  --card: 217 50% 90%;
+  --card-foreground: 217 5% 15%;
+  --popover: 217 100% 95%;
+  --popover-foreground: 217 100% 10%;
+  --primary: 217 45% 27%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 217 30% 70%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 179 30% 85%;
+  --muted-foreground: 217 5% 35%;
+  --accent: 179 30% 80%;
+  --accent-foreground: 217 5% 15%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 217 5% 90%;
+  --border: 217 30% 50%;
+  --input: 217 30% 26%;
+  --ring: 217 45% 27%;
+  --radius: 1rem;
+}
+
+.dark {
+  --gradient: linear-gradient(to top left, #003973, #e5e5be);
+  --background: 217 50% 10%;
+  --foreground: 217 5% 90%;
+  --card: 217 50% 10%;
+  --card-foreground: 217 5% 90%;
+  --popover: 217 50% 5%;
+  --popover-foreground: 217 5% 90%;
+  --primary: 217 45% 27%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 217 30% 20%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 179 30% 25%;
+  --muted-foreground: 217 5% 60%;
+  --accent: 179 30% 25%;
+  --accent-foreground: 217 5% 90%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 217 5% 90%;
+  --border: 217 30% 26%;
+  --input: 217 30% 26%;
+  --ring: 217 45% 27%;
+  --radius: 1rem;
 }
 
 @layer base {
